--- a/le-jeu.html
+++ b/le-jeu.html
@@ -47,7 +47,7 @@
 <p>Forge ton destin, défends ta place à la Boquette, et deviens une légende dans les ateliers</p>
                 </div>
                 <div class="intro-image">
-                    <img src="images/game_action.png" alt="Scène de gameplay du jeu" class="responsive-img">
+                    <img src="images/game_action.jpg" alt="Scène de gameplay du jeu" class="responsive-img">
                 </div>
             </section>
             <!-- Ajoutez plus de sections, images, vidéos liées au jeu ici -->
