--- a/multimedia.html
+++ b/multimedia.html
@@ -40,12 +40,13 @@
             <h2 class="section-title">Galerie d'Images</h2>
             <div class="gallery-grid">
                 <!-- Répétez ces blocs pour chaque image de la galerie -->
-                <img src="images/game_action.png" alt="Capture d'écran du jeu 1" class="gallery-img responsive-img">
+                <img src="images/game_action.jpg" alt="Capture d'écran du jeu 1" class="gallery-img responsive-img">
                 <img src="images/hero_background.png" alt="Photo de la console 1" class="gallery-img responsive-img">
 		<img src="images/asset-1.jpg" alt="Photo de la console 1" class="gallery-img responsive-img">
 		<img src="images/asset-2.jpg" alt="Photo de la console 1" class="gallery-img responsive-img">
 		<img src="images/asset-3.jpg" alt="Photo de la console 1" class="gallery-img responsive-img">
 		<img src="images/asset-4.jpg" alt="Photo de la console 1" class="gallery-img responsive-img">
+		<img src="images/asset-5.jpg" alt="Photo de la console 1" class="gallery-img responsive-img">
                 <!-- Ajoutez d'autres images ici -->
             </div>
             <!-- Vous devrez ajouter des styles CSS pour .gallery-grid et .gallery-img dans style.css -->
