--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <p>Incarnez un conscrit jeté dans un campus d'Angers désert, mais regorgeant de secrets. Chaque recoin, chaque bâtiment, chaque salle de classe cache des indices et des ressources vitales pour votre survie. Le jeu mêle habilement l'exploration, la gestion de ressources et la narration immersive, le tout teinté de l'esprit Gadz'Arts. <a href="le-jeu.html" class="read-more">En savoir plus sur le jeu</a></p>
                 </div>
                 <div class="intro-image">
-                    <img src="images/game_action.png" alt="Images du jeu en action" class="responsive-img">
+                    <img src="images/game_action.jpg" alt="Images du jeu en action" class="responsive-img">
                 </div>
             </section>
 
