--- a/acheter.html
+++ b/acheter.html
@@ -51,7 +51,7 @@
 
                 <section class="intro-block">
 		     <div class="intro-image">
-		    <img src="images/team_bios.png" alt="Jeu seul" class="responsive-img">
+		    <img src="images/game_action.jpg" alt="Jeu seul" class="responsive-img">
 		    
 		</div>
 	    	  	<div class="intro-image">
